--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-adsense-account" content="ca-pub-8372382034153160" />
     <title>Game PlatForm</title>
+    <script
+      async
+      src="https://fundingchoicesmessages.google.com/i/pub-8372382034153160?ers=1"
+      nonce="5Cc6YC6YdFdF-3f9S8O7mA"
+    ></script>
+    <script nonce="5Cc6YC6YdFdF-3f9S8O7mA">
+      (function () {
+        function signalGooglefcPresent() {
+          if (!window.frames["googlefcPresent"]) {
+            if (document.body) {
+              const iframe = document.createElement("iframe");
+              iframe.style =
+                "width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;";
+              iframe.style.display = "none";
+              iframe.name = "googlefcPresent";
+              document.body.appendChild(iframe);
+            } else {
+              setTimeout(signalGooglefcPresent, 0);
+            }
+          }
+        }
+        signalGooglefcPresent();
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
